--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "author": "Timur Badretdinov <destinerx@gmail.com>",
   "scripts": {
-    "install": "tsc",
+    "build": "tsc",
     "prepublish": "npm run build"
   },
   "repository": {
